tests/syntax_error/utf8_multibyte_char.jou
def main() -> int:
    return 'รถ'  # Error: single quotes are for specifying a byte, maybe use double quotes to instead make a string?
